bugfix, no-cache

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br" style="min-width: 400px">
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Alexsandro Schneider &middot; Discente de Ciência da Computação.</title>
   <!-- CSS  -->
+  <link rel="icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link rel="icon" href="favicon.ico">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
-<body>
+<body class="grey">
   <header>
     <div class="navbar-fixed">
       <nav style="background-color: #343433">
@@ -124,15 +125,15 @@
           <li>
             <div class="collapsible-header white-text grey darken-3"><i class="material-icons">sports_esports</i>HOBBIES</div>
             <div class="collapsible-body white-text blue-grey darken-3"><span>Em meu tempo livre gosto de assistir séries, filmes, animes e alguns videos no youtube.
-              <br>Também gosto de jogar videogames, principalmente no PC.
-              <br>Prefiro jogos de FPS (tiro em primeira pessoa), porém também jogo RPGs, mundo aberto, etc.
+              <br>Sempre gostei de jogar videogames, principalmente no PC.
+              <br>Prefiro jogos de FPS (tiro em primeira pessoa), mas também jogo RPG, simuladores, mundo aberto, etc.
               <br>Sou corredor casual e gosto de ouvir música durante minhas corridas.
               <br>Tenho um gosto bem eclético: curto Rock, Metal, EDM, Pop, Reggae e outros.
-              <br>Meu hobby mais recente são os aviões RC. Quando encontro um campo aberto, passo horas voando meu avião. 
+              <br>Meu hobby mais recente são os aviões RC. Quando em um campo aberto, passo horas pilotando meu RC. 
             </span></div>
           </li>
           <li>
-            <div class="collapsible-header white-text grey darken-2"><i class="material-icons">whatshot</i>PROJETOS</div>
+            <div class="collapsible-header white-text grey darken-2"><i class="material-icons">engineering</i>PROJETOS</div>
             <div class="collapsible-body white-text blue-grey darken-2"><span>EM BREVE.</span></div>
           </li>
         </ul>
@@ -147,7 +148,7 @@
         <div class="col l8 s12 left">
           <h5 class="white-text">CONTATO</h5>
           <p class="grey-text text-lighten-4">Basta acessar alguma de minhas redes sociais e me mandar uma mensagem privada.
-            <br>Também disponibilizei dois endereços de email que podem ser utilizados para contato.
+            <br>Também disponibilizo de dois endereços de email que podem ser utilizados para contato.
           </p>
         </div>
         <div class="col l4 s12">
@@ -160,8 +161,8 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright black">
-      <div class="container">
+    <div class="footer-copyright black off">
+      <div class="container off">
         <a class="white-text"></a>Feito por Alexsandro Schneider</a>
       </div>
     </div>
